<?xml version="1.0" encoding="utf-8"?>
<org.lntu.online.ui.view.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    app:insetForeground="#4000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:padding="16dp"
                android:background="@color/color_primary"
                android:orientation="vertical"
                android:gravity="bottom">







            </LinearLayout>

            <View style="@style/AppTheme.ItemGap" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:id="@+id/main_action_browser"
                android:drawableStart="@drawable/ic_open_in_browser_grey600_24dp"
                android:drawableLeft="@drawable/ic_open_in_browser_grey600_24dp"
                android:text="@string/main_action_browser" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:id="@+id/main_action_logout"
                android:drawableStart="@drawable/ic_group_grey600_24dp"
                android:drawableLeft="@drawable/ic_group_grey600_24dp"
                android:text="@string/main_action_logout" />

            <View style="@style/AppTheme.ItemGap" />
            <View style="@style/AppTheme.DeepLine" />
            <View style="@style/AppTheme.ItemGap" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:id="@+id/main_action_market"
                android:drawableStart="@drawable/ic_grade_grey600_24dp"
                android:drawableLeft="@drawable/ic_grade_grey600_24dp"
                android:text="@string/main_action_market" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:id="@+id/main_action_feedback"
                android:drawableStart="@drawable/ic_comment_grey600_24dp"
                android:drawableLeft="@drawable/ic_comment_grey600_24dp"
                android:text="@string/main_action_feedback" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:id="@+id/main_action_share"
                android:drawableStart="@drawable/ic_share_grey600_24dp"
                android:drawableLeft="@drawable/ic_share_grey600_24dp"
                android:text="@string/main_action_share" />

            <View style="@style/AppTheme.ItemGap" />
            <View style="@style/AppTheme.DeepLine" />
            <View style="@style/AppTheme.ItemGap" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:visibility="gone"
                android:id="@+id/main_action_settings"
                android:drawableStart="@drawable/ic_settings_grey600_24dp"
                android:drawableLeft="@drawable/ic_settings_grey600_24dp"
                android:text="@string/main_action_settings" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:visibility="gone"
                android:id="@+id/main_action_faq"
                android:drawableStart="@drawable/ic_help_grey600_24dp"
                android:drawableLeft="@drawable/ic_help_grey600_24dp"
                android:text="@string/main_action_faq" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:id="@+id/main_action_agreement"
                android:drawableStart="@drawable/ic_info_grey600_24dp"
                android:drawableLeft="@drawable/ic_info_grey600_24dp"
                android:text="@string/main_action_agreement" />

            <TextView style="@style/AppTheme.DrawerItem"
                android:id="@+id/main_action_about"
                android:drawableStart="@drawable/ic_info_outline_grey600_24dp"
                android:drawableLeft="@drawable/ic_info_outline_grey600_24dp"
                android:text="@string/main_action_about" />

            <View style="@style/AppTheme.ItemGap" />

        </LinearLayout>

    </ScrollView>

</org.lntu.online.ui.view.ScrimInsetsFrameLayout>
