<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="4dp"
    android:orientation="vertical">

    <View
        android:id="@+id/grades_item_icon_blank_top"
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/grades_item_tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                android:textSize="16sp"
                tools:text="高等数学" />

            <TextView
                android:id="@+id/grades_item_tv_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_class_grey600_18dp"
                android:drawableLeft="@drawable/ic_class_grey600_18dp"
                android:drawablePadding="16dp"
                android:textSize="14sp"
                tools:text="H06849214A" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/grades_item_tv_semester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_schedule_grey600_18dp"
                    android:drawableLeft="@drawable/ic_schedule_grey600_18dp"
                    android:drawablePadding="16dp"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    tools:text="2014春" />

                <TextView
                    android:id="@+id/grades_item_tv_exam_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="14sp"
                    tools:text="重修" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:gravity="bottom">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/overall_score"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/grades_item_tv_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_color_primary"
                    android:textSize="22sp"
                    tools:text="96" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/credit"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/grades_item_tv_credit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_color_primary"
                    android:textSize="22sp"
                    tools:text="6.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_type"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/grades_item_tv_select_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textSize="14sp"
                    tools:text="必修" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_mode"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/grades_item_tv_test_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textSize="14sp"
                    tools:text="考试" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remarks"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/grades_item_tv_remarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textSize="14sp"
                    tools:text="正常" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/grades_item_icon_very_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/icon_very_good" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="bottom"
        android:background="@drawable/item_gap_shadow_bottom" />

    <View
        android:id="@+id/grades_item_icon_blank_bottom"
        android:layout_width="match_parent"
        android:layout_height="4dp" />

</LinearLayout>
